# ACCS

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.R  start_app.sh
accs_app/: manage.py  setup.sh  start_app.sh
accs_app/accs_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
accs_app/app/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
accs_app/app/migrations/: 0001_initial.py  0002_initial.py  0002_task_delete_prediction.py  0003_rename_sample_task_sample_id.py  0003_sample_public.py  0004_alter_sample_public.py  0004_sample_task_delete_task.py  0005_alter_sample_public.py  0005_alter_sample_task.py  0006_alter_sample_task.py  0007_alter_sample_creation_date.py  0008_alter_sample_task.py  0009_alter_sample_diagnosis_alter_sample_sample_name.py  0010_alter_sample_diagnosis_alter_sample_sample_name.py  0011_sample_model_alter_sample_user.py  0012_alter_sample_grn_idat_alter_sample_red_idat.py  0013_alter_sample_grn_idat_alter_sample_red_idat.py  0014_alter_sample_grn_idat_alter_sample_red_idat_and_more.py  0015_alter_sample_grn_idat_alter_sample_red_idat.py  0016_alter_sample_diagnosis_alter_sample_sample_name.py  0017_documents.py  0018_alter_sample_grn_idat_alter_sample_red_idat.py  0019_rename_documents_document.py  0020_alter_sample_grn_idat_alter_sample_red_idat.py
accs_app/global_templates/: 404.html
accs_app/models_collection/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
accs_app/users/: forms.py  models.py  signals.py  urls.py  views.py
images/app/: Dockerfile
images/celery_worker/: Dockerfile
nginx/: default.conf  default_deprecated.conf
r_resources/: accs_flow_2.R
(+36 files in other folders)
