[tool.poetry]
name = "accs"
version = "0.1.0"
description = ""
authors = ["Jan Binkowski <jan.binkowski@pum.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
django-tables2 = "^2.7.0"
django-extensions = "^3.2.3"
celery = {extras = ["redis"], version = "^5.4.0"}
django-celery-results = "^2.5.1"
python-dotenv = "^1.0.1"
amqp = "^5.2.0"
eventlet = "^0.36.1"
django-bootstrap-icons = "^0.8.7"
django-tinymce = "^4.0.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.7.0"
redis = "^5.0.7"
certifi = "^2024.12.14"
plotly = "^5.24.1"
pandas = "^2.2.3"
joblib = "^1.4.2"
scikit-learn = "1.5.0"
pyarrow = "^18.1.0"
slack-sdk = "^3.34.0"

[tool.poetry.group.dev.dependencies]
html-linter = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
